# quant_aware_training

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  analyze_sweeps.py  experiment.py  jupytext.toml  main.py  oracle_correction.py  pyproject.toml  run_experiment.py
.claude/: settings.json
aleph/: __init__.py  datasets.py  models.py  quantization.py  training.py  visualization.py
animations/: geometric_weight_quantization.py  legacy_geometric_weight_quantization.py  manim_geometric_quantization.md  manim_scene_narrative_outline.md
configs/: config.yaml
docs/: ARCHITECTURE.md  canonical_quantization_error.md  geometric_error_correction_brief.md  geometry_guided_spike_memo.md  geometry_overnight_12h_report.md  quantization_correction_system.md  rounding_exploration.md  sweep_results.md  transformer_correction_sweep.md  tropical_geometry.md  tropical_geometry_review.md
experiments/: README.md  canonical_overnight.py  correction_depth_scaling.py  correction_distillation_architectures.py  correction_distillation_sweep.py  geometric_decomposition_sweep.py  geometry_overnight.py  lambda_sweep.py  layer_distillation.py  output_distillation.py  quantization_geometry.py  transformer_correction_analysis.py
notebooks/: README.md  activation_quantization_geometry.py  canonical_error_correction.py  canonical_learned_correction.py  classification_quantization_geometry.py  correction_distillation.py  error_tracking_viz.ipynb  error_tracking_viz.py  geometric_correction_figures.py  geometric_entropy.ipynb  geometric_entropy.py  quantization_geometry.ipynb  (+6 more)
(+3344 files in other folders)
