[project]
name = "quant-aware-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.10.0",
    "tensorboard>=2.18.0",
]
