[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-aware-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.10.0",
    "tensorboard>=2.18.0",
    "seaborn>=0.13.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "ipykernel>=6.29.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aleph"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "jupytext>=1.16",
    "nbdime>=4.0",
    "nbstripout>=0.8",
]
